# filtergen

./: .arch-inventory  .bazelrc  .bzrignore  .cirrus.yml  .gitignore  .travis.yml  AUTHORS  BUILD  Cargo.toml  Doxyfile  HACKING  HISTORY  HONESTY  INSTALL  MODULE.bazel  Makefile  Makefile.am  README  README.md  SConstruct  THANKS  TODO  WORKSPACE  ast.h  configure.ac  configure.in  dummy_test.cc  error.c  error.h  expr.h  factoriser.c  factoriser.cc  factoriser.h  fg-cisco.c  fg-ipchains.c  fg-ipfilter.c  fg-iptables.c  fg-iptrestore.c  fg-util.c  fg-util.h  (+43 more)
.github/workflows/: ci.yml
debian/: README.Debian  changelog  conffiles  config  control  copyright  cron.d.ex  dirs  docs  ex.package.doc-base  examples  filtergen.conf  gbp.conf  init.d  menu.ex  postinst  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  rules.filter  templates  watch
debian/source/: options
debian/upstream/: metadata
doc/: BUILD  IR  SConscript  flow  notes
examples/: BUILD  SConscript  example.filter  forward-drop-test.filter  icmp.filter  proxy-fw-sample.filter  router-sample.filter
extras/: etc-filter-Makefile  filter.init  filtergen.spec
input/: BUILD  Makefile.am  SConscript  input.cc  input.h  sourcefile.c  sourcefile.h  sourcepos.c  sourcepos.h  sourceposition.cc  sourceposition.h  sourceposition_test.cc
input/filtergen/: BUILD  SConscript  ast.h  driver.cc  driver.h  enum.cc  enum.h  enum_test.cc  glue.c  glue.cc  include.c  include.h  parser.cc  parser.h  parser.y  parser.yy  parser_test.cc  resolver.c  resolver.cc  resolver.h  scanner.cc  scanner.h  scanner.l  scanner.ll  scanner_test.c  scanner_test.cc  scanner_test.rs  string_test.cc  token.cc  token.h  token_test.cc
input/filtergen/t/: BUILD  SConscript  comments_test.c  convert.c  emit.c  factorise.c  keywords_test.c  names_test.c  parse.c  scan.c  tokens_test.c
input/ipchains-save/: SConscript
input/iptables/: .arch-inventory  Makefile.am  SConscript  ast.h  emit.c  parse.c  parser.y  scan.c  scanner.l
input/iptables-save/: BUILD  SConscript  ast.h  driver.cc  driver.h  glue.c  glue.cc  parser.y  parser.yy  scanner.l  scanner.ll
input/iptables-save/t/: 01  02  BUILD  SConscript  comment  emit.c  parse.c  scan.c
input/iptables/t/: Makefile.am  SConscript  emit.c  scan.c  tokens
ir/: SConscript  binaryexpr.h  binaryexpr_test.cc  emit.c  expr.h  graphviz.c  graphviz.h  ir.c  ir.h
lib/: filter.rs
lib/input/: BUILD  filtergen.rs
output/: output.h
output/cisco/: BUILD  SConscript  fg-cisco.c
output/filtergen/: BUILD  SConscript  emit.c
output/graphviz/: SConscript  graphviz.c
output/ipchains/: BUILD  SConscript  fg-ipchains.c
output/ipfilter/: BUILD  SConscript  fg-ipfilter.c
output/iptables/: BUILD  SConscript  fg-iptables.c
output/iptablesrestore/: BUILD  SConscript  fg-iptablesrestore.c
site_scons/site_tools/: dejagnu.py  lcov.py  splint.py
src/: BUILD  main.rs  output.rs
src/output/: BUILD  nftables.rs
t/: .arch-inventory  Makefile.am  SConscript  check_examples  convert.c  emit.c  factorise.c  filter_emit.c  host-sample.filter  mask.filter  name.filter  parse.c  regress0.filter  scan.c  t_01_ccomment  t_01_scanner  t_02_hashcomment  t_03_hashnonewline  t_04_keywords  t_05_punct  t_06_numbers  t_07_names  t_08_networknames  t_09_badcomment  t_10_goodcomment  t_11_includeone  t_12_includeloop  t_13_includetwo  t_14_includeinline  t_15_includenotfound  t_16_emptyfilter  t_17_oneemptyrule  t_18_manyemptyrules  t_19_simplerule  t_20_fullrule  t_21_compoundarg  t_22_hostnames  t_23_ports  t_24_log  t_25_target  (+58 more)
t/data/: converter1.in  converter1.out  converter10.in  converter10.out  converter11.in  converter11.out  converter12.in  converter12.out  converter13.in  converter13.out  converter14.in  converter14.out  converter2.out  converter3.out  converter4.in  converter4.out  converter5.out  converter6.in  converter6.out  converter7.in  converter7.out  converter8.in  converter8.out  converter9.in  converter9.out  emitter10.out  emitter11.out  emitter12.in  emitter12.out  emitter13.in  emitter13.out  emitter14.in  emitter14.out  emitter15.out  emitter3.out  emitter4.in  emitter4.out  emitter5.in  emitter5.out  emitter6.in  (+48 more)
tests/: example.filter  oneway.filter  tgroup2.filter  tlog.filter  tneg.filter  tport.filter
testsuite/: BUILD  SConscript  dejagnu.BUILD  dejagnu.bzl  dejagnu_runtest_wrapper.tpl
testsuite/config/: unix.exp
testsuite/fg-convert.dg/: BUILD  convert.exp  converter1.golden  converter11.golden  converter2.in  converter3.in  converter5.in  includeemptynoop.in  includeglob.golden  includeglob.in  includesemicolon.golden  includesemicolon.in  noop.in
testsuite/fg-convert.dg/includeglob.d/: 1  2  3
testsuite/fg-emit.dg/: BUILD  emit.exp  emitter10.in  emitter11.in  emitter14.golden  emitter15.in  emitter8.in
testsuite/fg-parse.dg/: BUILD  example1.in  negation.in  nestedparse.in  parse.exp
testsuite/fg-scan.dg/: BUILD  include.in  includedir.in  includedirtwofiles.in  includedirwdir.in  includedirwfile.in  includeemptyfile.in  includeinline.in  includetwo.in  keywords.exp  names.exp  network.exp  newlinecomment.in  noincluderoot.in  recursiveinclude.in  scan.exp  unexpected.in
testsuite/filtergen/: BUILD  examples.exp  filtergen.exp  nft.filter  tnat.filter
testsuite/filtergen.parse/: include.conf  nestedparse.in
testsuite/filtergen.scan/: ccomment.in  comments.exp  commentwonewline.in  hashcomment.in  hashcomment2.in  include.in  includeinline.in  includenotfound.in  includetwo.in  names.exp  nocommentend.in  numbers.exp  recursiveinclude.in  scan.exp
testsuite/ipts-parse.dg/: BUILD  chain1.in  icmp-type_option.in  ipts-parse.exp  limit_option.in  not_destination_option.in  rule3.in  syn_option.in  to_ports_option.in
testsuite/ipts-scan.dg/: BUILD  identifiers.in  ipts-long-options.exp
testsuite/ipts.scan/: tokens.in
testsuite/lib/: BUILD  compare.exp  fg-convert-dg.exp  fg-emit-dg.exp  fg-parse-dg.exp  fg-scan-dg.exp  filtergen-dg.exp  filtergen-parse-dg.exp  filtergen-scan-dg.exp  ipts-parse-dg.exp  ipts-scan-dg.exp
(+48 files in other folders)
