[package]
name = "filtergen"
version = "0.14.0"
edition = "2024"
authors = ["Jamie Wilkinson <jaq@spacepants.org>"]

[lib]
name = "filtergen_lib"
path = "lib/filtergen.rs"

[dependencies]
nom = "7"
ipnet = "2"

[dependencies.clap]
features = ["derive"]
version = "4.5.16"

[dev-dependency]
pretty_assertions = "1.4.1"
