module(name = "filtergen")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_bison", version = "0.4.bcr.1")
bazel_dep(name = "rules_cc", version = "0.2.20")
bazel_dep(name = "rules_flex", version = "0.4.1")
bazel_dep(name = "rules_m4", version = "0.3.bcr.1")
bazel_dep(name = "rules_rust", version = "0.71.2")
bazel_dep(name = "rules_shell", version = "0.8.0")

bazel_dep(name = "bazel_clang_tidy", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2", dev_dependency = True)
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
bazel_dep(name = "rules_dejagnu", version = "0.0.1", dev_dependency = True)

# Not in BCR
git_override(
    module_name = "rules_dejagnu",
    commit = "62b93f417c2655b305e03cd9f03e2058e51c8253",
    remote = "https://github.com/jaqx0r/rules_dejagnu.git",
)

# To rebuild `compile_commands.json` for clangd:
#   bazel run @hedron_compile_commands//:refresh_all
git_override(
    module_name = "hedron_compile_commands",
    commit = "75ba4c31d3b74fa5fb57c7508220571d4e52f828",
    remote = "https://github.com/helly25/bazel-compile-commands-extractor.git",
)

git_override(
    module_name = "bazel_clang_tidy",
    commit = "c4d35e0d0b838309358e57a2efed831780f85cd0",
    remote = "https://github.com/erenon/bazel_clang_tidy.git",
)

# bazel build --config=iwyu //...
bazel_dep(name = "bazel_iwyu", dev_dependency = True)
git_override(
    module_name = "bazel_iwyu",
    commit = "f6d684187ec4fff1863b728df99d35101c0bd2c9",
    remote = "https://github.com/storypku/bazel_iwyu",
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.85.0"],
)

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")
